Created basic database interaction.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,8 +7,17 @@ ktor {
         modules = [ com.catvasiliy.ApplicationKt.module ]
     }
 }
+
 jwt {
     domain = "https://jwt-provider-domain/"
     audience = "jwt-audience"
     realm = "ktor sample app"
+}
+
+database {
+    host = ${PGSQL_HOST}
+    port = ${PGSQL_PORT}
+    name = ${PGSQL_NAME}
+    user = ${PGSQL_USER}
+    password = ${PGSQL_PASSWORD}
 }
