--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ ktor = "2.3.10"
 logback = "1.4.14"
 exposed = "0.41.1"
 postgresql = "42.7.3"
+koin = "3.5.6"
 
 [libraries]
 
@@ -12,17 +13,21 @@ postgresql = "42.7.3"
 ktor-server-core = { group = "io.ktor", name = "ktor-server-core-jvm" }
 ktor-server-netty = { group = "io.ktor", name = "ktor-server-netty-jvm" }
 
-# Ktor authentication
-ktor-server-auth = { group = "io.ktor", name = "ktor-server-auth-jvm" }
-ktor-server-auth-jwt = { group = "io.ktor", name = "ktor-server-auth-jwt-jvm" }
+# Dependency injection
+koin-ktor = { group = "io.insert-koin", name = "koin-ktor", version.ref = "koin" }
+koin-logger = { group = "io.insert-koin", name = "koin-logger-slf4j", version.ref = "koin" }
+
+# Ktor serialization
+ktor-server-content-negotiation = { group = "io.ktor", name = "ktor-server-content-negotiation-jvm" }
+ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json-jvm" }
 
 # Ktor logging
 ktor-server-call-logging = { group = "io.ktor", name = "ktor-server-call-logging-jvm" }
 logback-classic = { group = "ch.qos.logback", name = "logback-classic", version.ref = "logback"}
 
-# Ktor serialization
-ktor-server-content-negotiation = { group = "io.ktor", name = "ktor-server-content-negotiation-jvm" }
-ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json-jvm" }
+# Ktor authentication
+ktor-server-auth = { group = "io.ktor", name = "ktor-server-auth-jvm" }
+ktor-server-auth-jwt = { group = "io.ktor", name = "ktor-server-auth-jwt-jvm" }
 
 # Database
 exposed-core = { group = "org.jetbrains.exposed", name = "exposed-core", version.ref = "exposed" }
